--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                 </div>
               </div>
 
+              <div class="bill-zone">
+                <b>Total</b>
+                <div id="showTotal" class="mostrar-total"></div>
+              </div>
         </div>
 
     </main>
