se agrego el footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
        <!-- <img class="img_header" src="assets/img/SuperFly.png" alt=""> -->  
 
-       <nav class="navbar navbar-expand-lg bg-body-tertiary">
+       <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">LOS MAGOS DE LA <strong>PIZZA</strong></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,12 +87,17 @@
               </div>
 
               <div class="bill-zone">
-                <b>Total</b>
+                <h2>Total</h2>
                 <div id="showTotal" class="mostrar-total"></div>
               </div>
         </div>
 
     </main>
+
+    <footer>
+      Pagina creada con fines academicos | <a target="_blank" href="https://github.com/sebaslopezg/laboratorioJS1_proyecto2">Repositorio</a>
+    </footer>
+
     <script src="assets/js/fontawesome.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="assets/js/data.js"></script>
