--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </div>
 
               <div class="bill-zone">
-                <h2>Total</h2>
+                <h2>Total <span id="granTotal" class="badge text-bg-secondary"></span></h2>
                 <div id="showTotal" class="mostrar-total"></div>
               </div>
         </div>
